# data-analysis

./: main.py  pyproject.toml
dashboard/: covid.py  diwali_sales.py  iphone_sales_dashboard.py  uber_dashboard.py
dataset/: passanger_test_data.csv
notebooks/: covid_analysis.ipynb  customer_churn.ipynb  diwali_sales_analysis.ipynb  gold_price_analysis.ipynb  google_trends_analysis.ipynb  iphone_sales_analysis.ipynb  iris_analysis.ipynb  real_state_Analysis.ipynb  titanic_data_analysis.ipynb  uber_analysis.ipynb
