[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "notebook>=7.4.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "pytrends>=4.9.2",
    "seaborn>=0.13.2",
    "streamlit>=1.48.1",
]
